Fix content not fitting centered div

--- a/public/shared.auth.style.css
+++ b/public/shared.auth.style.css
@@ -4,7 +4,6 @@ body {
 
 .centered-container {
   background-color: white;
-  height: 60vh;
   font-size: 1.6rem;
 }
 
